Renamed module chexagon-form-auth to form-auth

--- a/form-auth/README.adoc
+++ b/form-auth/README.adoc
@@ -5,7 +5,7 @@ Running :
  * execute `mvn clean integration-test cargo:run` +
    this will start tomcat on port 8080. +
    remote debugging is available on port 9009.
- * browse http://localhost:8080/chexagon-form-auth/hello
+ * browse http://localhost:8080/form-auth/hello
  * enter the credentials username=admin password=<empty> +
    you should see the HTTP Status 400 - Invalid direct reference to form login page
 
@@ -13,7 +13,7 @@ Running as docker :
  * execute `mvn clean package -Pdocker`
  * execute `docker-compose -f src/main/docker/docker-compose.yml up` +
    this starts up the application behind a load balancer (accessible though 8080 port).
- * open your browser on http://localhost:8080/chexagon-form-auth/hello
+ * open your browser on http://localhost:8080/form-auth/hello
  * you can scale up the number of app with : +
    docker-compose -f src/main/docker/docker-compose.yml scale app=2
  * enter the credentials username=admin password=<empty> +
