--- a/form-auth/README.adoc
+++ b/form-auth/README.adoc
@@ -1,6 +1,8 @@
-Sample application to illustrate https://github.com/chexagon/redis-session-manager/issues/14.
+Sample application to illustrate https://github.com/pivotalsoftware/session-managers
+with tomcat form-based authentication.
 
 Running :
+
  * start a redis bd on localhost:6379.
  * execute `mvn clean integration-test cargo:run` +
    this will start tomcat on port 8080. +
@@ -10,6 +12,7 @@ Running :
    you should see the HTTP Status 400 - Invalid direct reference to form login page
 
 Running as docker :
+
  * execute `mvn clean package -Pdocker`
  * execute `docker-compose -f src/main/docker/docker-compose.yml up` +
    this starts up the application behind a load balancer (accessible though 8080 port).
@@ -20,4 +23,5 @@ Running as docker :
    you should see the HTTP Status 400 - Invalid direct reference to form login page
 
 Additional information:
- * chexagon is configured in src/main/webapp/WEB-INF/META-INF/context.xml
+
+ * ha plugin is configured in src/main/webapp/WEB-INF/META-INF/context.xml
