Configured docker push
See readme.adoc for usage instructions

--- a/form-auth/README.adoc
+++ b/form-auth/README.adoc
@@ -14,13 +14,18 @@ Running :
 Running as docker :
 
  * execute `mvn clean package -Pdocker`
- * execute `docker-compose -f src/main/docker/docker-compose.yml up` +
+ * execute `docker-compose -f target/classes/docker-compose.yml up` +
    this starts up the application behind a load balancer (accessible though 8080 port).
  * open your browser on http://localhost:8080/form-auth/hello
  * you can scale up the number of app with : +
-   docker-compose -f src/main/docker/docker-compose.yml scale app=2
+   docker-compose -f target/classes/docker-compose.yml scale app=2
  * enter the credentials username=admin password=<empty> +
    you should see the HTTP Status 400 - Invalid direct reference to form login page
+
+Push docker image to dockerhub:
+
+ * docker login
+ * mvn clean deploy -Pdocker -DaltDeploymentRepository=snapshot-repo::default::file:./my-local-snapshots-dir
 
 Additional information:
 
